# C-projects

./: .gitignore  README.md
BankManagement/: Account.cpp  Account.hpp  BankManagementSystem.cpp  BankManagementSystem.hpp  CMakeLists.txt  main.cpp
BankManagment/: Account.cpp  Account.hpp  BankManagementSystem.cpp  BankManagementSystem.hpp  CMakeLists.txt
BookshopManagement/: Book.cpp  Book.hpp  BookshopManagementSystem.cpp  BookshopManagementSystem.hpp  CMakeLists.txt  main.cpp
CasinoGuessingGame/: main.cpp
